syntax = "proto3";

package minter;

service Minter {
  rpc MintNFT(MintNFTRequest) returns (MintNFTResponse);

  rpc MintFT(MintFTRequest) returns (MintFTResponse);
}

message MintNFTRequest {
  string name = 1;
  string symbol = 2;
  string uri = 3;
  string recipient = 4;
}

message MintNFTResponse {
  string publicKey = 1;
  string signature = 2;
}

message MintFTRequest {
  float amount = 2;
  string recipient = 1;
}

message MintFTResponse {
  string signature = 1;
}